--- a/personal website/src/components/Projects/Projects.css
+++ b/personal website/src/components/Projects/Projects.css
@@ -48,7 +48,7 @@
     display: flex;
     gap: 30px;
 }
-.projects-card div > button{
+.projects-card div > .button{
     width: 100px;
     padding:15px 2px ;
     background-color: transparent;
@@ -58,11 +58,12 @@
     cursor: pointer;
     transition: 400ms;
     margin-bottom: 5px;
+    text-align: center;
 }
-.projects-card div > button:hover{
+.projects-card div > .button:hover{
     background-color: #ffffff5b;
 }
-.projects-card div > button:active{
+.projects-card div > .button:active{
     transform: translateY(10px);
 }
 
