--- a/personal website/src/components/GetInTouch/GetInTouch.css
+++ b/personal website/src/components/GetInTouch/GetInTouch.css
@@ -114,7 +114,8 @@ form{
         text-wrap: nowrap ;
     }
     .send-form{
-        width: 100vw;
+        width: 90vw;
+        padding-right: 20px;
     }
     .get-in-touch{
         overflow-x: hidden;
